--- a/index.html
+++ b/index.html
@@ -100,19 +100,19 @@
                     <hr class="dashed-hr">
                     <a target="_blank"
                         href="https://drive.google.com/file/d/1-cGdbRYxUTg5dXCdwz3XFnLXg0L8H_xL/view?usp=drivesdk"
-                        class="nt"><i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;Selected Student for Intership</a>
+                        class="nt"><i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;Selected Student for internship</a>
                     <hr class="dashed-hr">
                     <a target="_blank"
                         href="https://drive.google.com/file/d/1-cGdbRYxUTg5dXCdwz3XFnLXg0L8H_xL/view?usp=drivesdk"
-                        class="nt"><i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;Selected Student for Intership</a>
+                        class="nt"><i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;Selected Student for internship</a>
                     <hr class="dashed-hr">
                     <a target="_blank"
                         href="https://drive.google.com/file/d/1-cGdbRYxUTg5dXCdwz3XFnLXg0L8H_xL/view?usp=drivesdk"
-                        class="nt"><i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;Selected Student for Intership</a>
+                        class="nt"><i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;Selected Student for internship</a>
                     <hr class="dashed-hr">
                     <a target="_blank"
                         href="https://drive.google.com/file/d/1-cGdbRYxUTg5dXCdwz3XFnLXg0L8H_xL/view?usp=drivesdk"
-                        class="nt"><i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;Selected Student for Intership</a>
+                        class="nt"><i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;Selected Student for internship</a>
                     <hr class="dashed-hr">
                 </marquee>
             </div>
@@ -554,24 +554,7 @@
     <section class="cropper-sub2 animate-me">
         <h2 class="heading-primary--main white-head3" id="ot">Our Team</h2>
         <div class="team-lead-main">
-            <div class="team-lead l3">
-                <img loading="lazy" src="img/direc.990a53616fac14413f86.png" class="image">
-                <hr>
-                <h2 class="name">DR. SUNIL DHINGRA</h2>
-                <h2 class="name name1">DIRECTOR</h2>
-                <hr>
-                <div class="ourteam">
-                    The Department of Training and Placement helps students get placed in top industrial establishments.
-                    We thank organizations for trusting us and hope to maintain a strong relationship with them.
-                </div>
-                <hr>
-                <div class="ourlogo">
-                    <a href="https://www.linkedin.com/in/dr-sunil-dhingra-18780949" class="ourdiv">
-                        <img src="img/linkedin.png" alt="" class="ouricon"></a>
-                    <a href="mailto:sdhingra2015@kuk.ac.in" class="ourdiv">
-                        <img src="img/email.png" alt="" class="ouricon ouriconlast"></a>
-                </div>
-            </div>
+            
             <div class="team-lead l1">
                 <img loading="lazy" src="img/nikhil_sir.png" class="image image8">
                 <hr>
@@ -609,6 +592,24 @@
                     <a href="https://www.linkedin.com/in/sanjeev-ahuja-486793111" class="ourdiv">
                         <img src="img/linkedin.png" alt="" class="ouricon"></a>
                     <a href="mailto:sahuja2015@kuk.ac.in" class="ourdiv">
+                        <img src="img/email.png" alt="" class="ouricon ouriconlast"></a>
+                </div>
+            </div>
+            <div class="team-lead l3">
+                <img loading="lazy" src="img/sunild.jpg" class="image">
+                <hr>
+                <h2 class="name">DR. SUNIL DHINGRA</h2>
+                <h2 class="name name1">CONVENER (Mechanical)</h2>
+                <hr>
+                <div class="ourteam">
+                    The Department of Training and Placement helps students get placed in top industrial establishments.
+                    We thank organizations for trusting us and hope to maintain a strong relationship with them.
+                </div>
+                <hr>
+                <div class="ourlogo">
+                    <a href="https://www.linkedin.com/in/dr-sunil-dhingra-18780949" class="ourdiv">
+                        <img src="img/linkedin.png" alt="" class="ouricon"></a>
+                    <a href="mailto:sdhingra2015@kuk.ac.in" class="ourdiv">
                         <img src="img/email.png" alt="" class="ouricon ouriconlast"></a>
                 </div>
             </div>
