--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
     <div class="teacher-main">
         <div class="teacher">
             <img loading="lazy" src="img/Saumya-mam-768x1024.jpg" class="photo">
-            <div class="name tcname">Mrs. Saumya Goyal</div>
+            <div class="name tcname">Ms. Saumya Goyal</div>
             <div class="name1 tcdep">Dept. of Computer Engg.</div>
             <a href="mailto:goyalsaumya4@gmail.com" class="ourdiv">
                 <img src="img/email.png" alt="" class="ouricon tcdiv"></a>
